--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,12 +12,12 @@ collections:
     slug: "{{slug}}"
     sort: "date:desc"
     fields:
-      - {label: "Type", name: "type", widget: "string", required: false}
-      - {label: "Language", name: "language", widget: "string", required: false}
       - {label: "Title", name: "title", widget: "string", required: true}
+      - {label: "Description", name: "description", widget: "string", required: true}
       - {label: "Publish Date", name: "date", widget: "date", required: true}
       - {label: "Updated Date", name: "update", widget: "date", required: false}
-      - {label: "Author", name: "author", widget: "string", required: true}
-      - {label: "Author Link", name: "authorlink", widget: "string", required: false}
-      - {label: "Featured Image", name: "thumbnail", widget: "image", required: true}
       - {label: "Body", name: "body", widget: "markdown", required: true}
+  - name: "tags"
+    label: "Tags"
+    widget: "list"
+    default: ["android"]
