--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,8 @@ collections:
       - {label: "Publish Date", name: "date", widget: "date", required: true}
       - {label: "Updated Date", name: "update", widget: "date", required: false}
       - {label: "Body", name: "body", widget: "markdown", required: true}
-  - name: "tags"
-    label: "Tags"
-    widget: "list"
-    default: ["android"]
+#  - name: "tags"
+#    label: "Tags"
+#    folder: "contents/tags
+#    widget: "list"
+#    default: ["android"]
