--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agatevure",
   "version": "1.0.0",
-  "description": "Gconnect portfolio",
+  "description": "Welcome to my site. I am an Android Developer, UI/UX designer and Community Builder.",
   "author": "cjustinobi",
   "private": true,
   "scripts": {
