--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-tag-manager": "^2.2.1",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/sitemap": "^1.3.0",
     "front-matter-markdown": "^0.4.3",
     "frontmatter-markdown-loader": "^1.8.0",
     "lodash": "^4.17.11",
